fix letter spacing

--- a/opdracht2/src/styles/components/_introduction.css
+++ b/opdracht2/src/styles/components/_introduction.css
@@ -8,6 +8,7 @@ body > section:first-of-type {
 		color: var(--MainLightGray);
 		line-height: 1.4;
 		margin-bottom: 2rem;
+		letter-spacing: 0.05px;
 
 		& span {
 			font-size: 2.125rem;
