--- a/opdracht2/src/styles/global/_settings.css
+++ b/opdracht2/src/styles/global/_settings.css
@@ -21,7 +21,7 @@ html,
 body {
 	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 	line-height: 1.5;
-	letter-spacing: 0.4px;
+	letter-spacing: 0.3px;
 }
 
 .active {
